Complete 90% of CSS, but need to change images and fix some spacing

--- a/styles.css
+++ b/styles.css
@@ -20,26 +20,49 @@ li {
 /* ------------------------------ sidebar start --------------------------------- */
 
 .sidebar {
+    padding: 15px;
     background-color: rgb(20, 141, 189);
     grid-area: sidebar;
-    /* fix below later */
-    text-align: center; 
     color: white;
 
+    
     display: grid;
-    grid-template-rows: 1fr 2fr 1.5fr;
-    align-content: start;
+    grid-template-rows: 1fr 3fr 8fr;
+    grid-template-columns: 1fr 1fr;
 }
 
-.sidebar>div {
+.sidebar-row1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    align-items: end;
+
     display: grid;
     grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
 }
 
-.sidebar img {
+.sidebar-row1 img {
     width: 5vw;
     height: 5vh;
     color: white;
+    grid-column: 1 / 1;
+}
+
+.sidebar-row2 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    align-items: end;
+    margin-left: 10px;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(6, 1fr) 2fr repeat(3, 1fr);
+    gap: 10px;
+}
+
+.sidebar-row2 img {
+    width: 3vw;
+    height: 3vh;
     grid-column: 1 / 1;
 }
 
@@ -49,12 +72,16 @@ li {
     padding: 15px;
     grid-area: header;
     background-color: white;
+
+    display: grid;
+    grid-template-rows: 1fr 2fr;
+    gap: 30px;
 }
 
 .searchbar {
-    width: 75vw;
     display: flex;
     justify-content: space-between;
+    padding: 0 50px;
 }
 
 .searchbar img,
@@ -75,18 +102,28 @@ li {
 
 .header-row2 {
     display: grid;
-    grid-template: 0fr / 1fr 3fr repeat(3, 1fr);
-    gap: 10px;
+    grid-template: 0fr / 0fr 6fr repeat(3, 1.2fr);
+    padding-left: 50px;
+    padding-right: 40px;
+    gap: 20px;
+}
+
+.header-row2 button {
+    background-color: rgb(0, 153, 255);
+    box-shadow: none;
+    border: none;
+    border-radius: 20px;
+    color: white;
 }
 
 /* ------------------------------ main  start ----------------------------------- */
 
 .main {
-    padding: 10px;
+    padding: 20px;
     grid-area: main;
     display: grid;
     background-color: rgb(228, 228, 228);
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: 3fr 1fr;
     gap: 20px;
 }
 
